tests/rosetta/out/C/apply-a-digital-filter-direct-form-ii-transposed-.error
cc: exit status 1
/tmp/apply-a-digital-filter-direct-form-ii-transposed-.c: In function ‘main’:
/tmp/apply-a-digital-filter-direct-form-ii-transposed-.c:62:14: error: redefinition of ‘a’
   62 |   list_float a = a;
      |              ^
/tmp/apply-a-digital-filter-direct-form-ii-transposed-.c:57:14: note: previous definition of ‘a’ with type ‘list_float’
   57 |   list_float a = list_float_create(4);
      |              ^
/tmp/apply-a-digital-filter-direct-form-ii-transposed-.c:68:14: error: redefinition of ‘b’
   68 |   list_float b = b;
      |              ^
/tmp/apply-a-digital-filter-direct-form-ii-transposed-.c:63:14: note: previous definition of ‘b’ with type ‘list_float’
   63 |   list_float b = list_float_create(4);
      |              ^
/tmp/apply-a-digital-filter-direct-form-ii-transposed-.c:90:14: error: redefinition of ‘sig’
   90 |   list_float sig = sig;
      |              ^~~
/tmp/apply-a-digital-filter-direct-form-ii-transposed-.c:69:14: note: previous definition of ‘sig’ with type ‘list_float’
   69 |   list_float sig = list_float_create(20);
      |              ^~~
