tests/rosetta/out/C/apply-a-digital-filter-direct-form-ii-transposed-.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:37:17Z
#include <stdio.h>
#include <stdlib.h>

typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_float concat_list_float(list_float a, list_float b) {
  list_float r = list_float_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static int k = 0;

list_float applyFilter(list_float input, list_float a, list_float b) {
  list_float tmp1 = {0, NULL};
  list_float out = tmp1;
  double scale = 1.0 / a.data[0];
  int i = 0;
  while ((i < input.len)) {
    double tmp = 0.0;
    int j = 0;
    while (j <= i && j < b.len) {
      tmp = tmp + b.data[j] * input.data[i - j];
      j = j + 1;
    }
    j = 0;
    while (j < i && j + 1 < a.len) {
      tmp = tmp - a.data[j + 1] * out.data[i - j - 1];
      j = j + 1;
    }
    list_float tmp2 = list_float_create(1);
    tmp2.data[0] = tmp * scale;
    list_float tmp3 = concat_list_float(out, tmp2);
    out = tmp3;
    i = i + 1;
  }
  return out;
}

int main() {
  list_float a = list_float_create(4);
  a.data[0] = 1.0;
  a.data[1] = (-0.00000000000000027756);
  a.data[2] = 0.33333333;
  a.data[3] = (-0.0000000000000000185);
  list_float a = a;
  list_float b = list_float_create(4);
  b.data[0] = 0.16666667;
  b.data[1] = 0.5;
  b.data[2] = 0.5;
  b.data[3] = 0.16666667;
  list_float b = b;
  list_float sig = list_float_create(20);
  sig.data[0] = (-0.917843918645);
  sig.data[1] = 0.141984778794;
  sig.data[2] = 1.20536903482;
  sig.data[3] = 0.190286794412;
  sig.data[4] = (-0.662370894973);
  sig.data[5] = (-1.00700480494);
  sig.data[6] = (-0.404707073677);
  sig.data[7] = 0.800482325044;
  sig.data[8] = 0.743500089861;
  sig.data[9] = 1.01090520172;
  sig.data[10] = 0.741527555207;
  sig.data[11] = 0.277841675195;
  sig.data[12] = 0.400833448236;
  sig.data[13] = (-0.2085993586);
  sig.data[14] = (-0.172842103641);
  sig.data[15] = (-0.134316096293);
  sig.data[16] = 0.0259303398477;
  sig.data[17] = 0.490105989562;
  sig.data[18] = 0.549391221511;
  sig.data[19] = 0.9047198589;
  list_float sig = sig;
  list_float res = applyFilter(sig, a, b);
  while (k < res.len) {
    printf("%.17g\n", res.data[k]);
    k = k + 1;
  }
  return 0;
}
